<resources>
    <string name="app_name">SantaderDevWeek</string>
    <string name="saldo_disponivel">Saldo disponível</string>
    <string name="string_saldo_limite">Saldo - Limite:</string>
    <string name="txt_ver_extrato">Ver extrato</string>
    <string name="txt_recarga">Recarregar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_bemvindo">Olá</string>
    <string name="txt_final_card">Cartão Final</string>
</resources>